fix(exercise-list): fix alignment

--- a/src/components/pages/Wod/Wod.scss
+++ b/src/components/pages/Wod/Wod.scss
@@ -34,7 +34,6 @@
     width: 70%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
 
     > .exercise-list {
       margin-top: 1.2em;
