--- a/src/components/ui/ExerciseForm/ExerciseForm.scss
+++ b/src/components/ui/ExerciseForm/ExerciseForm.scss
@@ -2,6 +2,7 @@
 
 .button-container {
   width: 25%;
+  margin-top: 1em;
   display: flex;
   justify-content: space-between;
   align-items: center;
